build/log/idf_py_stdout_output_20683
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /media/jdx/jdx/esp32_idf/esp-idf/examples/peripherals/uart/uart_async_rxtxtasks/build/bootloader/esp-idf/esptool_py && /home/jdx/.espressif/python_env/idf6.0_py3.11_env/bin/python /media/jdx/jdx/esp32_idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /media/jdx/jdx/esp32_idf/esp-idf/examples/peripherals/uart/uart_async_rxtxtasks/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/uart_async_rxtxtasks_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/uart_async_rxtxtasks_main.c.obj 
/home/jdx/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3618-g7f6e7f4506-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I../../../../../components/newlib/platform_include -I../../../../../components/freertos/config/include -I../../../../../components/freertos/config/include/freertos -I../../../../../components/freertos/config/xtensa/include -I../../../../../components/freertos/FreeRTOS-Kernel/include -I../../../../../components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I../../../../../components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I../../../../../components/freertos/esp_additions/include -I../../../../../components/esp_hw_support/include -I../../../../../components/esp_hw_support/include/soc -I../../../../../components/esp_hw_support/include/soc/esp32 -I../../../../../components/esp_hw_support/dma/include -I../../../../../components/esp_hw_support/ldo/include -I../../../../../components/esp_hw_support/debug_probe/include -I../../../../../components/esp_hw_support/mspi_timing_tuning/include -I../../../../../components/esp_hw_support/power_supply/include -I../../../../../components/esp_hw_support/port/esp32/. -I../../../../../components/esp_hw_support/port/esp32/include -I../../../../../components/heap/include -I../../../../../components/heap/tlsf -I../../../../../components/log/include -I../../../../../components/soc/include -I../../../../../components/soc/esp32 -I../../../../../components/soc/esp32/include -I../../../../../components/soc/esp32/register -I../../../../../components/hal/platform_port/include -I../../../../../components/hal/esp32/include -I../../../../../components/hal/include -I../../../../../components/esp_rom/include -I../../../../../components/esp_rom/esp32/include -I../../../../../components/esp_rom/esp32/include/esp32 -I../../../../../components/esp_rom/esp32 -I../../../../../components/esp_common/include -I../../../../../components/esp_system/include -I../../../../../components/esp_system/port/soc -I../../../../../components/esp_system/port/include/private -I../../../../../components/xtensa/esp32/include -I../../../../../components/xtensa/include -I../../../../../components/xtensa/deprecated_include -I../../../../../components/esp_driver_uart/include -I../../../../../components/esp_driver_gpio/include -I../../../../../components/driver/deprecated -I../../../../../components/driver/i2c/include -I../../../../../components/driver/touch_sensor/include -I../../../../../components/driver/twai/include -I../../../../../components/driver/touch_sensor/esp32/include -I../../../../../components/esp_pm/include -I../../../../../components/esp_ringbuf/include -I../../../../../components/esp_driver_pcnt/include -I../../../../../components/esp_driver_gptimer/include -I../../../../../components/esp_driver_spi/include -I../../../../../components/esp_driver_mcpwm/include -I../../../../../components/esp_driver_ana_cmpr/include -I../../../../../components/esp_driver_i2s/include -I../../../../../components/esp_driver_sdmmc/include -I../../../../../components/sdmmc/include -I../../../../../components/esp_driver_sdspi/include -I../../../../../components/esp_driver_sdio/include -I../../../../../components/esp_driver_dac/include -I../../../../../components/esp_driver_rmt/include -I../../../../../components/esp_driver_tsens/include -I../../../../../components/esp_driver_sdm/include -I../../../../../components/esp_driver_i2c/include -I../../../../../components/esp_driver_ledc/include -I../../../../../components/esp_driver_parlio/include -I../../../../../components/esp_driver_usb_serial_jtag/include -I../../../../../components/esp_driver_twai/include -I../components/icm20948/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/media/jdx/jdx/esp32_idf/esp-idf/examples/peripherals/uart/uart_async_rxtxtasks=. -fmacro-prefix-map=/media/jdx/jdx/esp32_idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/uart_async_rxtxtasks_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/uart_async_rxtxtasks_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/uart_async_rxtxtasks_main.c.obj   -c ../main/uart_async_rxtxtasks_main.c
../main/uart_async_rxtxtasks_main.c: In function 'init_buf':
../main/uart_async_rxtxtasks_main.c:140:13: warning: unused variable 'ID' [-Wunused-variable]
  140 |     uint8_t ID=0xfe;
      |             ^~
../main/uart_async_rxtxtasks_main.c: In function 'rx_task':
../main/uart_async_rxtxtasks_main.c:247:45: error: 'acce' undeclared (first use in this function)
  247 |         ret1 = icm20948_get_acce(icm20948, &acce);
      |                                             ^~~~
../main/uart_async_rxtxtasks_main.c:247:45: note: each undeclared identifier is reported only once for each function it appears in
../main/uart_async_rxtxtasks_main.c:250:53: error: 'gyro' undeclared (first use in this function)
  250 |                 ret2 = icm20948_get_gyro(icm20948, &gyro);
      |                                                     ^~~~
ninja: build stopped: subcommand failed.
